2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	* filter.c (filters, filter_init): Serious gc bug fixed: neglected to
	inform the garbage collector about the filters global variable.
	Ouch!

2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	New test case under tests/008.

	* Makefile: Made previous TXR_ARGS for 008 specific
	to tokenizing test case, and introduced separate TXR_ARGS
	for this test case.

	* tests/008/configfile: New file.

	* tests/008/configfile.expected: New file.

	* tests/008/configfile.txr: New file.

2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	Tokenizing test case, exercising for @(coll :gap 0)
	and horizontal @(choose :shortest ...).

	* Makefile: Defined TXR_ARGS for tests/008 directory.

	* tests/008/data: New file.
	* tests/008/tokenize.expected: New file.
	* tests/008/tokenize.txr: New file.

2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	New test case, covering exception handling across nested
	function invocations.

	* Makefile (TEST): Test targets marked as .PHONY, because they are.

	* tests/007/except-1.expected: New file.
	* tests/007/except-1.txr: New file.

2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (all_clause, some_clause, none_clause, maybe_clause,
	cases_clause, choose_clause, elem): Regression bug fix: bad list calls
	in parser, lacking nao terminator.

2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	Regression bug fix: longest match variables broken by
	2011-09-28 commit which introduced the double var match.

	* match.c (match_line): Handle case where modifier is t.

	* parser.y (var_op): Produce modifir as (t) rather than t.

2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Documented choose and horizontal mode for paralle
	constructs.

2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	New directive: choose.

	* match.c (choose_s, longest_k, shortest_k): New variables.
	(match_line, match_files): Introduced choose directive.
	(match_init): Initialize new variables.

	* match.h (choose_s): Declared.
