@@ -1,0 +1,22 @@
+<Students>
+@(collect)
+@  (cases)
+  <Student Name="@NAME" Gender="@GENDER"@/ +/DateOfBirth="@YEAR-@MONTH-@DAY"@/.*/
+@  (or)
+  <Student DateOfBirth="@YEAR-@MONTH-@DAY" Gender="@GENDER" Name="@NAME"@/.*/
+@  (end)
+@  (maybe)
+    <Pet Type="@PET_TYPE" Name="@PET_NAME" />
+@  (or)
+@  (bind PET_TYPE "none")
+@  (bind PET_NAME "")
+@  (end)
+@(until)
+</Students>
+@(end)
+@(output :filter :from_html)
+NAME         G DOB        PET
+@  (repeat)
+@{NAME 12} @GENDER @YEAR-@MONTH-@DAY @PET_TYPE @PET_NAME
+@  (end)
+@(end)
